[package]
name = "tinynode"
version = "0.0.1"
edition = "2024"

[dependencies]
axum = "0.8.8"
tokio = { version = "1.48.0",features = ["full"]}
serde = { version = "1.0.228",features = ["derive"]}
serde_json = "1.0.145"
tracing = "0.1.43"
tracing-subscriber = {version = "0.3.22",features = ["env-filter"]}
anyhow = "1.0.100"

#MQTT
rumqttc = "0.25.1"
